# adaptive_iterator

./: Cargo.toml
benches/: bench.rs
examples/: odd_even.rs
src/: adaptive.rs  blocked.rs  lib.rs  main.rs  task.rs
