[package]
name = "adaptive_iterator"
version = "0.1.0"
authors = ["Maiko Mueller <maiko.mueller@inria.fr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {git = "https://github.com/ma1ko/rayon"}
criterion = {git = "https://github.com/ma1ko/criterion.rs"}
rand = "*"
adaptive_algorithms = {git="https://github.com/ma1ko/adaptive_algorithms"}
rayon_try_fold = {git="https://github.com/ma1ko/rayon_try_fold"}
rayon_logs = {git="https://github.com/ma1ko/rayon-logs"}
num_cpus = "*"
replace_with = "*"

[features]
logs = ["adaptive_algorithms/logs"]
statistics = ["adaptive_algorithms/statistics"]

[[bench]]
name = "bench"
harness = false
